# OSMParser

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: osmimember.hpp  osmnode.hpp  osmobject.hpp  osmrelation.hpp  osmway.hpp  util.hpp
osmparser/: CMakeLists.txt
osmparser/inc/osmparser/: member.h  node.h  object.h  relation.h  tag.h  util.h  way.h
osmparser/src/: member.cc  node.cc  object.cc  relation.cc  util.cc  way.cc
sampledata/: sample.osm
src/: CMakeLists.txt  osmimember.cpp  osmimember.hpp  osmnode.cpp  osmnode.hpp  osmobject.cpp  osmobject.hpp  osmp.hpp  osmrelation.cpp  osmrelation.hpp  osmtag.hpp  osmway.cpp  osmway.hpp  util.cpp
